# nano-empreendedores

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/agents/: data-engineer.md  report-writer.md  socioeconomic-analyst.md  statistician.md
.claude/commands/: etapa-1-preparar-bases.md  etapa-2-estimar-universo.md  etapa-3-caracterizar.md  etapa-4-relatorio.md  pipeline-completo.md
docs/: decisoes-tecnicas.md  dicionario-dados.md  metodologia.md  validacao-cruzada.md
outputs/relatorios/: apresentacao-v1.pptx
outputs/tabelas/etapa2/: nano_serie_temporal.csv  nano_serie_temporal.parquet
outputs/tabelas/etapa3/: perfil_demografico.csv  perfil_demografico.parquet  perfil_economico.csv  perfil_economico.parquet  perfil_recorte_abevd.csv  perfil_recorte_abevd.parquet  perfil_setorial.csv  perfil_setorial.parquet
scripts/: mei_watchdog.py
src/: __init__.py  paths.py
src/analysis/: __init__.py  comparisons.py  profiles.py  universe_estimator.py
src/ingest/: __init__.py  _http.py  censo.py  mei.py  pnadc.py
src/report/: __init__.py  builder.py
src/report/templates/: relatorio.html.j2  sumario_executivo.html.j2
src/transform/: __init__.py  filters.py  harmonize.py
src/viz/: __init__.py  charts.py  tables.py
