[project]
name = "nano-empreendedores"
version = "0.1.0"
description = "Estimativa e caracterização do universo de nano-empreendedores no Brasil — estudo FGV NPII / ABEVD"
requires-python = ">=3.11"
authors = [
    { name = "FGV NPII" },
]
readme = "README.md"

dependencies = [
    # núcleo de dados
    "pandas>=2.2",
    "pyarrow>=15.0",
    "numpy>=1.26",

    # microdados IBGE
    "requests>=2.32",
    "tqdm>=4.66",
    "openpyxl>=3.1",          # leitura de dicionários Excel do IBGE
    "ftputil>=5.1",           # FTP do IBGE quando necessário

    # análise amostral (PNADC tem desenho complexo)
    "samplics>=0.4",          # estimativas com pesos amostrais e variância

    # visualização
    "matplotlib>=3.8",
    "plotly>=5.20",
    "seaborn>=0.13",

    # tabelas e relatório
    "great-tables>=0.10",     # tabelas formatadas
    "jinja2>=3.1",            # templates de relatório
    "weasyprint>=61",         # HTML → PDF
    "python-pptx>=0.6",       # apresentação executiva

    # geo (mapas por UF)
    "geopandas>=0.14",
    "shapely>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "ipykernel>=6.29",
    "jupyter>=1.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
